[project]
name = "TrainTrack"
version = "0.1.0"
description = "TrainTrack: FastAPI wrapper that fetches Indian Railways train running status and parses upstream data into structured JSON events."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.12.0",
    "fastapi>=0.128.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
